--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
-    "@mui/styles": "^5.16.7",
+    "@mui/styles": "^5.11.0", // Cập nhật phiên bản tương thích với React 18
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,7 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "vercel-build": "npm install --legacy-peer-deps && npm run build",
+    "postinstall": "npm install --legacy-peer-deps",
+    "vercel-build": "npm run postinstall && npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
